--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,6 @@
     "name": "ldonis/yamles",
     "description": "Super simple yml parser",
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=5.3.0"
     }
 }
